--- a/E-Commerce.Web/Views/Shared/_Layout.cshtml
+++ b/E-Commerce.Web/Views/Shared/_Layout.cshtml
@@ -72,15 +72,12 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid main-content" style="margin-top: 100px;">
+    <div class="container-fluid main-content " style="margin-top: 100px; background: linear-gradient(to bottom, #f8f9fa, #e9ecef);">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="py-5 bg-dark mt-lg-5">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-    </footer>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
