--- a/E-Commerce.Web/Views/Shared/_Section.cshtml
+++ b/E-Commerce.Web/Views/Shared/_Section.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-<div class="container mt-5 mb-5 pt-2 position-relative">
+<div class="container  mt-5 mb-5 pt-2 position-relative">
     <h2 class="mb-4 fw-bold">@Model.Name</h2>
 
     <button class="btn btnLeft btn-light position-absolute top-50 start-0 translate-middle-y z-1 rounded-circle shadow">
@@ -23,7 +23,7 @@
                         <div style="position: relative; width: 240px; height: 220px;">
                             <img src="/@product.ImageUrl" class="card-img-top" alt="Product"
                             style="height: 220px; width: 240px; object-fit: cover;">
-                            <span class="badge bg-dark category-badge position-absolute top-0 start-0 m-2">
+                            <span class="badge bg-primary category-badge position-absolute top-0 start-0 m-2">
                                 @Model.Name
                             </span>
                         </div>
