--- a/E-Commerce.Web/Views/Product/Index.cshtml
+++ b/E-Commerce.Web/Views/Product/Index.cshtml
@@ -75,5 +75,23 @@
         $('#SearchInput').on('input', function () {
             this.value = this.value.replace(/[^0-9]/g, '');
         });
+
+        $(document).on('click', '.pagination-link', function (e) {
+            e.preventDefault();
+            var page = $(this).data('pagenumber');  
+            var pageSize = $(this).data('pagesize');
+            $('#ProductTable').html('<div class="text-center p-5"><div class="spinner-border text-primary" role="status"><span class="visually-hidden">Loading...</span></div></div>');
+            $.ajax({
+                url: '@Url.Action("ProductTable", "Product")',
+                data: { pageNumber: page, pageSize: pageSize },
+                success: function (result) {
+                    $('#ProductTable').html(result);
+                },
+                error: function () {
+                    $('#ProductTable').html('<div class="alert alert-danger m-3"><i class="bi bi-exclamation-triangle me-2"></i>Something went wrong. Please try again.</div>');
+                }
+            });
+        });
+
     </script>
 }
