--- a/E-Commerce.Web/Views/Category/Index.cshtml
+++ b/E-Commerce.Web/Views/Category/Index.cshtml
@@ -98,7 +98,7 @@
                                             </td>
                                             <td class="text-center">
                                                 <div class="btn-group" role="group">
-                                                    <a asp-action="Details" asp-route-id="@category.Id"
+                                                    <a asp-action="Products" asp-route-id="@category.Id"
                                                        class="btn btn-info btn-sm" title="View Details">
                                                         <i class="fa fa-info-circle"></i>
                                                     </a>
