--- a/E-Commerce.Web/Views/Product/Create.cshtml
+++ b/E-Commerce.Web/Views/Product/Create.cshtml
@@ -25,7 +25,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Price" class="form-label"></label>
-                            <input asp-for="Price" type="number" class="form-control" placeholder="Enter Product price in EGP" />
+                            <input asp-for="Price" type="number" step="0.01" class="form-control" placeholder="Enter Product price in EGP" />
                             <span asp-validation-for="Price" class="text-danger"></span>
                         </div>
                         <div class="form-group">
